View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026843 | Open CASCADE | OCCT:Coding | public | 2015-11-05 11:39 | 2016-04-20 15:51 |
Reporter | bugmaster | Assigned To | abv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Mac | OS | OS | ||
Product Version | 7.0.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026843: New warning during compilation OCCT on MacOS | ||||
Description | OSD.cxx:132, Clang (LLVM based), Priority: Normal 'finite' is deprecated: first deprecated in OS X 10.9 OSD.cxx:136, Clang (LLVM based), Priority: Normal 'finite' is deprecated: first deprecated in OS X 10.9 | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR26843 has been created by abv. SHA-1: 21a6fcc1dbabbb41fadec7780eafe8aae93ce790 Detailed log of new commits: Author: abv Date: Sat Nov 7 15:28:24 2015 +0300 0026843: New warning during compilation OCCT on MacOS Remove unused (and not implemented) methods in OSD package: IsDivisible(), GetExponent(), GetMantissa(), AvailableMemory() |
|
Fix pushed to CR26843, please review |
|
Patch still leaves some declarations, which seems to be no more needed.21 #if defined(isfinite) 22 # define finite isfinite 23 #endif ... 76 # define _DEXPLEN 11 77 # define _IEEE 1 78 # define DMAXEXP ((1 << _DEXPLEN - 1) - 1 + _IEEE) 79 # define finite _finite |
|
Branch CR26843 has been updated forcibly by abv. SHA-1: cda9a0d4c226e569ce3663ef2e0d1a6022d7e3f2 |
|
Corrected, please review again |
|
Please check compilation, testing is not needed. Note that patch is based on branch for 0026780. |
|
Branch CR26843 has been deleted by kgv. SHA-1: cda9a0d4c226e569ce3663ef2e0d1a6022d7e3f2 |
occt: master cda9a0d4 2015-11-07 12:28:24 Committer: abv Details Diff |
0026843: New warning during compilation OCCT on MacOS Remove unused (and not implemented) methods in OSD package: IsDivisible(), GetExponent(), GetMantissa(), AvailableMemory() |
Affected Issues 0026843 |
|
mod - src/OSD/OSD.cxx | Diff File | ||
mod - src/OSD/OSD.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-11-05 11:39 | bugmaster | New Issue | |
2015-11-05 11:39 | bugmaster | Assigned To | => kgv |
2015-11-05 11:39 | bugmaster | Status | new => assigned |
2015-11-07 15:28 | git | Note Added: 0047904 | |
2015-11-07 15:29 | abv | Note Added: 0047905 | |
2015-11-07 15:29 | abv | Status | assigned => resolved |
2015-11-07 15:29 | abv | Steps to Reproduce Updated | |
2015-11-07 15:45 | kgv | Note Added: 0047906 | |
2015-11-07 15:46 | kgv | Note Edited: 0047906 | |
2015-11-07 21:40 | git | Note Added: 0047911 | |
2015-11-07 23:03 | abv | Note Added: 0047913 | |
2015-11-08 10:18 | kgv | Note Added: 0047919 | |
2015-11-08 10:18 | kgv | Assigned To | kgv => bugmaster |
2015-11-08 10:18 | kgv | Status | resolved => reviewed |
2015-11-08 10:19 | kgv | Note Edited: 0047919 | |
2015-11-09 11:56 |
|
Assigned To | bugmaster => mkv |
2015-11-13 11:53 | abv | Changeset attached | => occt master cda9a0d4 |
2015-11-13 11:53 | abv | Assigned To | mkv => abv |
2015-11-13 11:53 | abv | Status | reviewed => verified |
2015-11-13 11:53 | abv | Resolution | open => fixed |
2016-04-17 14:23 | git | Note Added: 0053157 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |