0026843: New warning during compilation OCCT on MacOS

Remove unused (and not implemented) methods in OSD package: IsDivisible(), GetExponent(), GetMantissa(), AvailableMemory()